# Lightning-NeRF

./: .gitignore  LICENSE  README.md  pyproject.toml
lightning_nerf/: config.py  field.py  model.py  sampler.py  utils.py
